# wotw-seedgen

./: .gitignore  Cargo.toml  Dockerfile  README.md  areas.wotw  build.rs  loc_data.csv  state_data.csv
seedgen_cli/: Cargo.toml  build.rs
seedgen_cli/src/: main.rs
wotw_seedgen/: .gitignore  Cargo.toml  areas.wotw  build.rs  loc_data.csv  state_data.csv  write_presets.bat
wotw_seedgen/benches/: bench.rs
wotw_seedgen/headers/: autoplants.wotwrh  better_random_spawn.wotwrh  better_stomp.wotwrh  better_wellspring.wotwrh  bingo.wotwrh  black_market.wotwrh  bonus+.wotwrh  bonus_core.wotwrh  bonus_items.wotwrh  bonus_opher_upgrades.wotwrh  force_quests.wotwrh  force_trees.wotwrh  force_wisps.wotwrh  fragment_overflow.wotwrh  glades_done.wotwrh  header_core.wotwrh  jumpgrades.wotwrh  key_hints.wotwrh  knowledge_hints.wotwrh  launch_fragments.wotwrh  launch_from_bingo.wotwrh  launch_on_seir.wotwrh  less_knockback.wotwrh  no_branch.wotwrh  no_combat.wotwrh  no_cutscenes.wotwrh  no_ks_doors.wotwrh  no_launch.wotwrh  no_quests.wotwrh  no_rain.wotwrh  no_trials.wotwrh  no_willow_hearts.wotwrh  open_mode.wotwrh  progress_helper.wotwrh  quest_autoadvance.wotwrh  quests.wotwrh  rando_core.wotwrh  rapid_hammer_core.wotwrh  rapid_smash_core.wotwrh  rapid_spear_core.wotwrh  (+19 more)
wotw_seedgen/presets/: glitches.json  gorlek.json  moki.json  qol.json  rspawn.json
wotw_seedgen/presets/overlays/: glitches.json  qol.json  rspawn.json
wotw_seedgen/src/: common_item.rs  lib.rs  logical_difficulty.rs  orbs.rs  tests.rs
wotw_seedgen/src/contained_uber_identifiers/: contained_reads.rs  contained_writes.rs  mod.rs
wotw_seedgen/src/files/: mod.rs
wotw_seedgen/src/generator/: cost.rs  doors.rs  item_pool.rs  mod.rs  placement.rs  seed.rs  seed_core.wotwr  spirit_light.rs  spoiler.rs  string_placeholders.rs  weight.rs
wotw_seedgen/src/inventory/: mod.rs  tests.rs
wotw_seedgen/src/item/: bonus_item.rs  bonus_upgrade.rs  command.rs  message.rs  mod.rs  resource.rs  shard.rs  shop_command.rs  skill.rs  sysmessage.rs  teleporter.rs  uber_state.rs  wheel_command.rs
wotw_seedgen/src/languages/: cursor.rs  mod.rs  parser.rs  token.rs
wotw_seedgen/src/preset/: mod.rs
wotw_seedgen/src/reach_check/: mod.rs
wotw_seedgen/src/settings/: mod.rs  slugstrings.rs
wotw_seedgen/src/uber_state/: game_data.rs  mod.rs  rando_data.rs
wotw_seedgen/src/util/: constants.rs  extensions.rs  icon.rs  mod.rs  orbs.rs
wotw_seedgen/src/world/: graph.rs  is_met.rs  mod.rs  player.rs  pool.rs  reached.rs  requirements.rs  simulate.rs  tests.rs
wotw_seedgen/world_presets/: full_bonus.json  glitches.json  gorlek.json  moki.json  qol.json  rspawn.json
wotw_seedgen_assets/: Cargo.toml
wotw_seedgen_assets/src/: file_access.rs  lib.rs  loc_data.rs  presets.rs  snippet_access.rs  state_data.rs  uber_state_data.rs
wotw_seedgen_assets/src/file_access/: cache.rs  default_dirs.rs  mod.rs  plando.rs  watch.rs
wotw_seedgen_cli/: Cargo.toml  build.rs
wotw_seedgen_cli/src/: cli.rs  headers.rs  http_server.rs  import_uber_states.rs  log_config.rs  log_init.rs  main.rs  plando.rs  play.rs  preset.rs  reach_check.rs  regenerate.rs  seed.rs  sort_uber_states.rs  stats.rs  tools.rs  universe_preset.rs  world_preset.rs
wotw_seedgen_cli/src/cli/: display.rs  http_server_args.rs  interactive.rs  mod.rs  plando_args.rs  preset_args.rs  regenerate_args.rs  seed_args.rs  seed_settings.rs  stats_args.rs
wotw_seedgen_cli/src/daemon/: mod.rs  reach_check.rs
wotw_seedgen_cli/src/files/: mod.rs  seed_storage.rs
wotw_seedgen_data/: Cargo.toml
wotw_seedgen_data/src/: _uber_identifier.rs  equipment.rs  icon.rs  lib.rs  message.rs  position.rs  settings.rs  shard.rs  skill.rs  teleporter.rs  uber_identifier.rs  weapon_upgrade.rs  wheel.rs  zone.rs
wotw_seedgen_data/src/assets/: loc_data.rs  mod.rs  presets.rs  snippet_access.rs  state_data.rs  test_access.rs  uber_state_data.rs
wotw_seedgen_data/src/logic_language/: ast.rs  compile.rs  mod.rs  output.rs  tests.rs
wotw_seedgen_data/src/seed_language/: ast.rs  metadata.rs  mod.rs  tests.rs  token.rs  types.rs
wotw_seedgen_derive/: Cargo.toml  README.md
wotw_seedgen_derive/src/: ast.rs  display.rs  from_str.rs  lib.rs  span.rs  token_display.rs  v.rs
wotw_seedgen_http_server/: Cargo.toml
wotw_seedgen_http_server/.cargo/: config.toml
wotw_seedgen_http_server/src/: assets.rs  error.rs  generate.rs  inactivity_timeout.rs  lib.rs  reach_check.rs  settings.rs
wotw_seedgen_http_server/src/api/: logic.rs  mod.rs  reach_check.rs  schemas.rs  snippets.rs
wotw_seedgen_http_server/src/logic/: map_icons.rs  reachable.rs  relevant_uber_states.rs
wotw_seedgen_http_server/src/reach_check/: map_icons.rs  mod.rs  relevant_uber_states.rs
wotw_seedgen_logic_language/: Cargo.toml
wotw_seedgen_logic_language/src/: ast.rs  compile.rs  lib.rs  output.rs  tests.rs  token.rs
wotw_seedgen_lsp/: Cargo.toml
wotw_seedgen_lsp/src/: cache.rs  completion.rs  convert.rs  error.rs  folder_access.rs  hover.rs  lib.rs  semantic_tokens.rs
wotw_seedgen_parse/: Cargo.toml
wotw_seedgen_parse/src/: ast.rs  error.rs  helpers.rs  lib.rs  mode.rs  parser.rs  recover.rs  span.rs  tokenizer.rs
wotw_seedgen_parse/src/collections/: delimited.rs  mod.rs  punctuated.rs  separated.rs
wotw_seedgen_seed/: Cargo.toml
wotw_seedgen_seed/src/: assembly.rs  lib.rs  package.rs  seedgen_info.rs
wotw_seedgen_seed/src/compile/: args.rs  command.rs  intermediate.rs  mod.rs
wotw_seedgen_seed_language/: Cargo.toml
wotw_seedgen_seed_language/src/: ast.rs  lib.rs  metadata.rs  tests.rs  token.rs  types.rs
wotw_seedgen_seed_language/src/compile/: command.rs  content.rs  evaluate.rs  expression.rs  function.rs  helpers.rs  literal.rs  mod.rs  preprocess.rs
wotw_seedgen_seed_language/src/output/: command.rs  display.rs  event.rs  intermediate.rs  item_metadata.rs  mod.rs  operation.rs  postprocess.rs  string_placeholders.rs
wotw_seedgen_static_assets/: Cargo.toml  build.rs
wotw_seedgen_static_assets/src/: lib.rs  loc_data.rs  presets.rs  snippets.rs  state_data.rs  tests.rs  uber_state_data.rs
(+315 files in other folders)
