[package]
name = "wotw_seedgen"
description = "Seed Generator for the Ori and the Will of the Wisps Randomizer"
version = "0.0.2"
authors = ["Sirius Ashling <siriusashling@gmail.com>", "Rikhardur Bjarni Einarsson <badulf96@gmail.com>"]
edition = "2018"
repository = "https://github.com/ori-rando/wotw-seedgen"
publish = ["crates-io"]
license = "MIT"

[dependencies]
atty = "0.2.14"
bugsalot = "0.1.4"
structopt = "0.3.13"
serde = { version = "1.0.124", features = ["derive"] }
serde_json = "1.0.64"
csv = "1.1"
rustc-hash = "1.1.0"
rand = { version = "0.8.3", features = ["std_rng", "alloc"] }
rand_seeder = "0.2.2"
log = "0.4"
log4rs = "1.0.0"
ansi_term = "0.12.1"
smallvec = "1.6.1"
regex = "1"
open = "2"
num_enum = "0.5"
decorum = "0.3"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "bench"
harness = false

[[bin]]
name = "seedgen"
path = "src/main.rs"