[workspace]
members = [
    "wotw_seedgen",
    "wotw_seedgen_assets",
    "wotw_seedgen_cli",
    # TODO maybe not all crates need all derives?
    "wotw_seedgen_derive",
    "wotw_seedgen_data",
    "wotw_seedgen_logic_language",
    "wotw_seedgen_parse",
    "wotw_seedgen_seed",
    "wotw_seedgen_seed_language",
    "wotw_seedgen_settings",
    "wotw_seedgen_static_assets", # TODO move into a feature module of assets?
    "wotw_seedgen_stats",
]
default-members = ["wotw_seedgen_cli"]
resolver = "2"
