[workspace]
members = [
    "wotw_seedgen",
    "wotw_seedgen_cli",
    "wotw_seedgen_derive",
    "wotw_seedgen_data",
    "wotw_seedgen_http_server",
    "wotw_seedgen_lsp",
    "wotw_seedgen_parse",
    "wotw_seedgen_seed",
    "wotw_seedgen_server_shared",
    "wotw_seedgen_stats",
]
resolver = "2"
