[package]
name = "wotw_seedgen"
description = "Seed Generator for the Ori and the Will of the Wisps Randomizer"
version = "0.4.1"
authors = ["Sirius Ashling <siriusashling@gmail.com>", "Rikhardur Bjarni Einarsson <badulf96@gmail.com>"]
edition = "2021"
repository = "https://github.com/ori-community/wotw-seedgen"
license = "MIT"

[features]
fs = []

[dependencies]
wotw_seedgen_derive = { path = "../wotw_seedgen_derive", version = "0.1" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.1"
rustc-hash = "1.1.0"
rand = { version = "0.8.3", features = ["std_rng", "alloc"] }
rand_seeder = "0.2.2"
log = { version = "0.4", optional = true }
ansi_term = "0.12.1"
smallvec = { version = "1.6.1", features = ["const_generics"] }
regex = "1"
num_enum = "0.7"
decorum = "0.3"
partition = "0.1"
itertools = "0.10"
indexmap = "2.7"

[dev-dependencies]
criterion = "0.3"

[build-dependencies]
syn = { version = "1.0", features = ["full"] }
vergen = { version = "8", features = [ "git", "gitoxide" ] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[[bench]]
name = "bench"
harness = false
