[package]
name = "wotw_seedgen"
description = "Seed Generator for the Ori and the Will of the Wisps Randomizer"
version = "0.4.1"
authors = ["Sirius Ashling <siriusashling@gmail.com>", "Rikhardur Bjarni Einarsson <badulf96@gmail.com>"]
edition = "2021"
repository = "https://github.com/ori-community/wotw-seedgen"
license = "MIT"

[dependencies]
wotw_seedgen_seed = { path = "../wotw_seedgen_seed" }
wotw_seedgen_data = { path = "../wotw_seedgen_data" }
serde = { version = "1.0", features = ["derive"] }
rustc-hash = "2.0"
rand = "0.8"
rand_pcg = "0.3"
rand_seeder = "0.3"
log = "0.4"
smallvec = { version = "1.6", features = ["const_generics"] }
ordered-float = "4.2"
partition = "0.1"
itertools = "0.13"
strum = { version = "0.26", features = ["derive"] }
indexmap = "2.7"
arrayvec = "0.7.6"

[dev-dependencies]
criterion = "0.5"
env_logger = { version = "0.11", default-features = false }

[build-dependencies]
# vergen = { version = "8.2", features = [ "git", "gitoxide" ] } # TODO move into binary?
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[[bench]]
name = "bench"
harness = false
