[package]
name = "wotw_seedgen_assets"
version = "0.1.0"
edition = "2021"

[dependencies]
wotw_seedgen_data = { path = "../wotw_seedgen_data" }
wotw_seedgen_settings = { path = "../wotw_seedgen_settings" }
serde = { version = "1.0", features = ["derive"] }
csv = "1.3"
serde_json = "1.0"
rustc-hash = "2.0"
itertools = "0.13"
indexmap = { version = "2.12.0", features = ["serde"] }
serde_with = "3.16.0"
