[package]
name = "wotw_seedgen_cli"
version = "0.1.0"
edition = "2021"

[dependencies]
wotw_seedgen = { version = "0.4", path = "../wotw_seedgen", features = ["log"] }
wotw_seedgen_seed_language = { path = "../wotw_seedgen_seed_language" }
wotw_seedgen_assets = { path = "../wotw_seedgen_assets", features = ["presets", "file_access"] }
wotw_seedgen_stats = { version = "0.1", path = "../wotw_seedgen_stats" }
clap = { version = "4.4", features = ["derive", "string"] }
itertools = "0.13"
rand = "0.8"
serde = "1.0"
serde_json = "1.0"
strum = "0.25"
rustc-hash = "1.1"
lazy_static = "1.4.0"
open = "5.1.2"
bugsalot = "0.2.2"
log4rs = { version = "1.3.0", default-features = false, features = ["console_appender", "file_appender", "json_encoder", "pattern_encoder", "threshold_filter"] }
ansi_term = { version = "0.12.1", default-features = false }
log = { version = "0.4.22", default-features = false }

[[bin]]
name = "seedgen"
path = "src/main.rs"
