[package]
name = "wotw_seedgen_cli"
version = "0.1.0"
edition = "2021"

[features]
stats = ["wotw_seedgen_stats"]
lsp = ["wotw_seedgen_lsp"]

[dependencies]
wotw_seedgen = { version = "0.4", path = "../wotw_seedgen" }
wotw_seedgen_seed_language = { path = "../wotw_seedgen_seed_language" }
wotw_seedgen_assets = { path = "../wotw_seedgen_assets", features = ["presets", "file_access"] }
wotw_seedgen_stats = { version = "0.1", path = "../wotw_seedgen_stats", optional = true }
wotw_seedgen_lsp = { version = "0.1", path = "../wotw_seedgen_lsp", optional = true }
clap = { version = "4.4", features = ["derive", "string"] }
itertools = "0.13"
rand = "0.8"
serde = "1.0"
serde_json = "1.0"
strum = "0.26"
rustc-hash = "2.0"
lazy_static = "1.4.0"
open = "5.1.2"
bugsalot = "0.2.2"
log = { version = "0.4" }
fern = { version = "0.7.0", features = ["colored"] }
dialoguer = { version = "0.11.0", default-features = false }
zip = { version = "4.0.0", default-features = false }
sanitize-filename = "0.5.0"
ordered-float = { version = "4.2", features = ["serde"] }
notify-debouncer-full = { version = "0.6.0", default-features = false }

[[bin]]
name = "wotw-seedgen"
path = "src/main.rs"
