[package]
name = "wotw_seedgen_cli"
version = "0.1.0"
edition = "2021"

[dependencies]
wotw_seedgen = { path = "../wotw_seedgen" }
wotw_seedgen_seed_language = { path = "../wotw_seedgen_seed_language" }
wotw_seedgen_assets = { path = "../wotw_seedgen_assets" }
wotw_seedgen_http_server = { path = "../wotw_seedgen_http_server" }
wotw_seedgen_stats = { path = "../wotw_seedgen_stats" }
wotw_seedgen_lsp = { path = "../wotw_seedgen_lsp" }
clap = { version = "4.4", features = ["derive", "string"] }
itertools = "0.13"
rand = "0.8"
rand_pcg = "0.3"
serde = "1.0"
serde_json = "1.0"
strum = "0.26"
rustc-hash = "2.0"
open = "5.1.2"
bugsalot = "0.2.2"
log = "0.4"
fern = { version = "0.7.0", features = ["colored"] }
dialoguer = { version = "0.11.0", default-features = false }
zip = { version = "4.0.0", default-features = false }
sanitize-filename = "0.5.0"
ordered-float = { version = "4.2", features = ["serde"] }
notify-debouncer-full = { version = "0.6.0", default-features = false }
arboard = { version = "3.6.1", default-features = false, features = ["wayland-data-control"] }
humantime = "2.3.0"

[[bin]]
name = "wotw-seedgen"
path = "src/main.rs"
