[package]
name = "wotw_seedgen_data"
version = "0.1.0"
edition = "2021"

[features]
serde = ["dep:serde", "serde_repr", "ordered-float/serde"]

[dependencies]
serde = { version = "1.0", optional = true, features = ["derive"] }
serde_repr = { version = "0.1", optional = true }
strum = { version = "0.26", optional = true, features = ["derive"] } # TODO investigate whether this or other feature gates are worth it for compile times
ordered-float = "4.2"
