[package]
name = "wotw_seedgen_data"
version = "0.1.0"
edition = "2021"

[dependencies]
wotw_seedgen_derive = { path = "../wotw_seedgen_derive" }
serde = { version = "1.0", features = ["derive"] }
serde_repr = "0.1"
strum = { version = "0.26", features = ["derive"] }
ordered-float = { version = "4.2", features = ["serde"]}
utoipa = { version = "5.4.0", features = ["repr"] }
