[package]
name = "wotw_seedgen_data"
version = "0.1.0"
edition = "2021"

[dependencies]
wotw_seedgen_derive = { path = "../wotw_seedgen_derive" }
wotw_seedgen_parse = { path = "../wotw_seedgen_parse", features = ["logos", "ordered_float"] }
arrayvec = "0.7.6"
constcat = "0.6.1"
csv = "1.3"
derivative = "2.2"
dirs = "6.0.0"
heck = "0.5.0"
indexmap = { version = "2.12.0", features = ["serde"] }
itertools = "0.13"
log = "0.4"
logos = "0.14"
notify-debouncer-full = { version = "0.6.0", default-features = false }
rand = "0.8"
rand_pcg = "0.3"
regex = { version = "1.11.1", default-features = false, features = ["std", "perf", "unicode-perl"] }
rustc-hash = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"
serde_with = "3.16.0"
smallvec = { version = "1.11", features = ["serde"] }
strsim = "0.11"
strum = { version = "0.26", features = ["derive"] }
thiserror = "2.0.17"
ordered-float = { version = "4.2", features = ["serde"]}
utoipa = { version = "5.4.0", features = ["repr"] }
