[package]
name = "wotw_seedgen_derive"
description = "Derive macro utilities used for wotw_seedgen"
version = "0.1.1"
edition = "2021"
repository = "https://github.com/ori-community/wotw-seedgen"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
itertools = "0.13"
proc-macro2 = "1.0"
heck = "0.5.0"
