[package]
name = "wotw_seedgen_logic_language"
version = "0.1.0"
edition = "2021"

[dependencies]
wotw_seedgen_parse = { path = "../wotw_seedgen_parse", features = ["ordered_float"] }
wotw_seedgen_assets = { path = "../wotw_seedgen_assets", features = ["loc_data", "state_data"] }
wotw_seedgen_data = { path = "../wotw_seedgen_data" }
wotw_seedgen_settings = { path = "../wotw_seedgen_settings" }
smallvec = "1.11"
logos = "0.14"
rustc-hash = "2.0"
ordered-float = "4.2"
strum = { version = "0.26", features = ["derive"] }

[dev-dependencies]
wotw_seedgen_static_assets = { path = "../wotw_seedgen_static_assets", features = ["loc_data", "state_data"] }
