[package]
name = "wotw_seedgen_lsp"
version = "0.1.0"
edition = "2021"

[dependencies]
dashmap = "5.5.3"
rand = { version = "0.8.5", default-features = false, features = ["std"] }
tokio = { version = "1.37.0", features = ["rt-multi-thread", "io-std"] }
tower-lsp = "0.20.0"
wotw_seedgen_seed_language = { path = "../wotw_seedgen_seed_language" }
wotw_seedgen_assets = { path = "../wotw_seedgen_assets" }
# Seedgen is the lsp now, so we don't *have* to use static assets
wotw_seedgen_static_assets = { path = "../wotw_seedgen_static_assets" }
lazy_static = "1.5.0"
rustc-hash = "2.0"
