[package]
name = "wotw_seedgen_lsp"
version = "0.1.0"
edition = "2021"

[dependencies]
dashmap = "5.5.3"
itertools = "0.13"
rand = { version = "0.8.5", default-features = false, features = ["std"] }
tokio = { version = "1.37.0", features = ["rt-multi-thread", "io-std"] }
tower-lsp = "0.20.0"
wotw_seedgen_data = { path = "../wotw_seedgen_data" }
wotw_seedgen_server_shared = { path = "../wotw_seedgen_server_shared" }
rustc-hash = "2.0"
