[package]
name = "wotw_seedgen_parse"
version = "0.1.0"
edition = "2021"

[features]
ordered_float = ["ordered-float"]

[dependencies]
wotw_seedgen_derive = { path = "../wotw_seedgen_derive" }
logos = { version = "0.14", optional = true }
itertools = "0.13"
ariadne = { version = "0.4.1" }
derivative = "2.2"
ordered-float = { version = "4.2", optional = true }
serde = { version = "1.0", features = ["derive"] }
utoipa = "5.4.0"
