[package]
name = "wotw_seedgen_seed"
version = "0.1.0"
edition = "2021"

[dependencies]
wotw_seedgen_data = { path = "../wotw_seedgen_data", features = ["serde", "strum"] }
wotw_seedgen_seed_language = { path = "../wotw_seedgen_seed_language" }
wotw_seedgen_settings = { path = "../wotw_seedgen_settings" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rustc-hash = "1.1"
zip = { version = "0.6.6", default-features = false, features = ["zstd"]}
arrayvec = "0.7.4"
