[package]
name = "wotw_seedgen_seed_language"
version = "0.1.0"
edition = "2021"

[dependencies]
wotw_seedgen_parse = { package = "wotw_seedgen_parse", path = "../wotw_seedgen_parse", features = ["ordered_float", "logos", "ariadne"] }
wotw_seedgen_data = { path = "../wotw_seedgen_data", features = ["serde", "strum"] }
wotw_seedgen_assets = { path = "../wotw_seedgen_assets", features = ["uber_state_data", "snippet_access"] }
logos = "0.14"
itertools = "0.13"
rustc-hash = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_repr = "0.1"
rand = "0.8"
rand_pcg = "0.3"
strsim = "0.11"
convert_case = "0.6"
ordered-float = "4.2"
derivative = "2.2"
strum = { version = "0.26", features = ["derive"] }

[dev-dependencies]
wotw_seedgen_static_assets = { path = "../wotw_seedgen_static_assets", features = ["loc_data", "state_data", "uber_state_data"] }
lazy_static = "1.4"
