[package]
name = "wotw_seedgen_static_assets"
version = "0.1.0"
edition = "2021"
publish = false # TODO fix by having the assets in the crate

[features]
loc_data = ["wotw_seedgen_assets/loc_data"]
state_data = ["wotw_seedgen_assets/state_data"]
uber_state_data = ["loc_data", "state_data", "wotw_seedgen_assets/uber_state_data"]
snippets = ["wotw_seedgen_assets/snippet_access", "rustc-hash", "itertools"]
presets = ["wotw_seedgen_assets/presets", "serde_json", "rustc-hash", "itertools"]

[dependencies]
wotw_seedgen_assets = { path = "../wotw_seedgen_assets", version = "0.1", optional = true }
lazy_static = "1.4"
rustc-hash = { version = "2.0", optional = true }
ciborium = "0.2"

[build-dependencies]
wotw_seedgen_assets = { path = "../wotw_seedgen_assets", version = "0.1", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", optional = true }
rustc-hash = { version = "2.0", optional = true }
itertools = { version = "0.13", optional = true }
ciborium = "0.2"
