[package]
name = "wotw_seedgen_static_assets"
version = "0.1.0"
edition = "2021"
publish = false # TODO fix by having the assets in the crate

[dependencies]
wotw_seedgen_assets = { path = "../wotw_seedgen_assets" }
wotw_seedgen_logic_language = { path = "../wotw_seedgen_logic_language" }
rustc-hash = "2.0"
ciborium = "0.2"

[build-dependencies]
wotw_seedgen_assets = { path = "../wotw_seedgen_assets" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rustc-hash = "2.0"
ciborium = "0.2"
